argocd/apps/infra/gitea/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Gitea
    gethomepage.dev/icon: gitea
    gethomepage.dev/description: "Gitea is a painless, self-hosted, all-in-one software development service."
    gethomepage.dev/pod-selector: app.kubernetes.io/name=gitea
  labels:
    app.kubernetes.io/instance: gitea-app
  name: gitea-httproute
  namespace: gitea
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-system
    sectionName: https
  hostnames:
  - gitea.yanello.net
  rules:
  - backendRefs:
    - name: gitea-http
      port: 3000
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: gitea-ssh
  namespace: gitea
spec:
  parentRefs:
    - name: gitea-gateway
      sectionName: ssh
  rules:
    - backendRefs:
        - name: gitea-ssh
          port: 2200
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gitea-gateway
spec:
  addresses:
    - value: 10.10.8.11
      type: IPAddress
  gatewayClassName: istio
  listeners:
    - name: ssh
      protocol: TCP
      port: 2200
      allowedRoutes:
        kinds:
          - kind: TCPRoute
